--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,1 +1,1 @@
-<app-photo *ngFor="let photo of photos" [src]="photo.url" [description]="photo.description"></app-photo>
+<ap-photos [photos]="photos"></ap-photos>
