--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -5,3 +5,4 @@
     </form>
 </div>
 <ap-photos [photos]="photos | filterByDescription : filter"></ap-photos>
+<ap-load-button (click)="loadPhotos()" [hasMore]="hasMore"></ap-load-button>
