--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -1,6 +1,6 @@
 <p class="text-center text-muted" *ngIf="!photos.length">Sorry, no photos!</p>
 <ol class="list-unstyled">
-    <li *ngFor="let row of rows" class="row">
+    <li *ngFor="let row of rows" class="row no-gutters">
         <div *ngFor="let photo of row" class="col-4">
             <ap-photo [src]="photo.url"
                       [description]="photo.description">
