--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -2,9 +2,15 @@
 <ol class="list-unstyled">
     <li *ngFor="let row of rows" class="row no-gutters">
         <div *ngFor="let photo of row" class="col-4">
-            <ap-photo [src]="photo.url"
-                      [description]="photo.description">
-            </ap-photo>
+            <ap-card [title]="photo.description">
+                <ap-photo [src]="photo.url"
+                          [description]="photo.description">
+                </ap-photo>
+                <div class="text-center p-1">
+                    <i aria-hidden="true" class="fa fa-heart-o fa-1x mr-2"></i> {{ photo.likes }}
+                    <i aria-hidden="true" class="fa fa-comment-o fa-1x mr-2 ml-2"></i> {{ photo.comments }}
+                </div>
+            </ap-card>
         </div>
     </li>
 </ol>
