Added name user in the header's application.

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,10 +1,12 @@
 <header class="sticky-top">
     <nav class="navbar navbar-light bg-white">
         <a class="navbar-brand text-danger">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/250px-Angular_full_color_logo.svg.png" width="30" /> AngularPic</a>
+            <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/250px-Angular_full_color_logo.svg.png"
+                width="30"/> AngularPic</a>
         <div>
             <i class="fa fa-user-circle"></i>
-            <a>User</a>
+            <a class="ml-2">{{ user?.name }}</a>
         </div>
     </nav>
 </header>
